--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,7 @@ ul li{
 /* Home */
 .home{
   height: 650px;
-  background: url('./pages/picshoes/reportWebVitals.jpg') no-repeat center center;
-  background-size: cover;
+  background: url('./pages/picshoes/shoes-4.jpg') no-repeat ;
   background-size: 100% 100%;
 }.home-h3{
   font-size: 15px;
